@@ -1,0 +1,4 @@
+markuphintsdir = $(pkgdatadir)/markuphints
+
+dist_markuphints_DATA = gtk+-2.0.markuphints
+
